[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/battle/components/PrimaryActionBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/anvil.png" type="Texture" id=2]
[ext_resource path="res://scenes/battle/components/ArmyActionBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/battle/components/ActionPanel.gd" type="Script" id=4]

[node name="ActionPanel" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin" type="MarginContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 633.0
custom_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_right = 346.0
margin_bottom = 618.0
custom_constants/separation = 12
alignment = 2

[node name="ArmyActionBar" parent="Margin/VBox" instance=ExtResource( 3 )]
anchor_right = 0.0
margin_top = 404.0
margin_right = 346.0
margin_bottom = 464.0

[node name="SupportBar" type="HBoxContainer" parent="Margin/VBox"]
margin_top = 476.0
margin_right = 346.0
margin_bottom = 536.0
custom_constants/separation = 8
alignment = 1

[node name="Button" type="Button" parent="Margin/VBox/SupportBar"]
margin_left = 41.0
margin_right = 101.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource( 2 )
expand_icon = true

[node name="Button2" type="Button" parent="Margin/VBox/SupportBar"]
margin_left = 109.0
margin_right = 169.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource( 2 )
expand_icon = true

[node name="Button3" type="Button" parent="Margin/VBox/SupportBar"]
margin_left = 177.0
margin_right = 237.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource( 2 )
expand_icon = true

[node name="Button4" type="Button" parent="Margin/VBox/SupportBar"]
margin_left = 245.0
margin_right = 305.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 5
size_flags_vertical = 5
icon = ExtResource( 2 )
expand_icon = true

[node name="PrimaryActionBar" parent="Margin/VBox" instance=ExtResource( 1 )]
anchor_right = 0.0
margin_top = 548.0
margin_right = 346.0
margin_bottom = 618.0

[connection signal="end_turn_pressed" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_end_turn_pressed"]
[connection signal="hide_army" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_hide_army"]
[connection signal="hide_support" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_hide_support"]
[connection signal="show_army" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_show_army"]
[connection signal="show_support" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_show_support"]
[connection signal="surrender_pressed" from="Margin/VBox/PrimaryActionBar" to="." method="_on_PrimaryActionBar_surrender_pressed"]
